...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dotLayoutHeight"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickBoton"
                    app:srcCompat="@drawable/punto1" />

...
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:alpha="0.0"
                    app:srcCompat="@android:color/transparent" />

                <ImageButton
                    android:id="@+id/imageButton34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickBoton"
                    app:srcCompat="@drawable/punto1" />

...
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:alpha="0.0"
                    app:srcCompat="@android:color/transparent" />

                <ImageButton
                    android:id="@+id/imageButton38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickBoton"
                    app:srcCompat="@drawable/punto1"/>

...
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:alpha="0.0"
                    app:srcCompat="@android:color/transparent" />

                <ImageButton
                    android:id="@+id/imageButton56"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickBoton"
                    app:srcCompat="@drawable/punto1" />

...
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:alpha="0.0"
                    app:srcCompat="@android:color/transparent" />

                <ImageButton
                    android:id="@+id/imageButton72"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickBoton"
                    app:srcCompat="@drawable/punto1" />

...
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:alpha="0.0"
                    app:srcCompat="@android:color/transparent" />

                <ImageButton
                    android:id="@+id/imageButton710"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickBoton"
                    app:srcCompat="@drawable/punto1" />

...
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:alpha="0.0"
                    app:srcCompat="@android:color/transparent" />

                <ImageButton
                    android:id="@+id/imageButton116"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clickBoton"
                    app:srcCompat="@drawable/punto1"/>

...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/finalizeDrawButton"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Guardar Laberinto" />

            <Button
                android:id="@+id/elegirBiblio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Elegir de la Biblioteca" />

            <Button
                android:id="@+id/compartirBluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/emplazar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Emplazar laberinto" />

            </LinearLayout>
...
