<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="com.example.carlos.wumpusproject.activity.GrafosRegulares"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Elija un laberinto:"
            android:textAppearance="@android:style/TextAppearance.Material.Headline" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.93"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Tetraedro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:background="@drawable/tetrahedron1"
                android:onClick="TetraedroOnClick"
                app:srcCompat="@android:color/transparent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Tetraedro" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Octaedro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:background="@drawable/octahedron1"
                app:srcCompat="@android:color/transparent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Octaedro" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Cubo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.05"
                android:background="@drawable/cube1"
                app:srcCompat="@android:color/transparent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Cubo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Icosaedro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.97"
                android:background="@drawable/icosahedron1"
                app:srcCompat="@android:color/transparent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Icosaedro" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Dodecaedro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.94"
                android:background="@drawable/dodecahedron1"
                app:srcCompat="@android:color/transparent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Dodecaedro" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>